<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/locationView"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sunriseLabel"
            android:layout_marginTop="8dp"

            />

    <TextView
            android:id="@+id/locationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/locationLabel"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/locationLabel"
            tools:text = "41.5, -73.3"
            />

    <TextView
            android:id="@+id/sunriseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sunriseView"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/locationLabel"
            android:layout_marginTop="8dp"
            android:text="@string/label_sunrise"
            />

    <TextView
            android:id="@+id/sunriseView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/sunriseLabel"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@id/sunsetLabel"

            app:layout_constraintBaseline_toBaselineOf="@id/sunriseLabel"
            tools:text="6:23"
            />

    <TextView
            android:id="@+id/sunsetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/sunriseView"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toStartOf="@id/sunsetView"
            app:layout_constraintBaseline_toBaselineOf="@id/sunriseView"
            android:text="@string/label_sunset"

            />

    <TextView
            android:id="@+id/sunsetView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/sunsetLabel"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/sunriseLabel"
            tools:text="18:45"
            />

    <ImageView
            android:id="@+id/petImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sunriseLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            android:contentDescription="@string/description_pet_pix"
            />

    <ImageButton
            android:id="@+id/refreshButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/icon_button_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/icon_button_margin"
            android:src="@drawable/ic_autorenew_white_24dp"
            android:contentDescription="@string/description_refresh_pix"
            android:background="@color/colorBackground"
            android:scaleType="fitCenter"
            />

    <ProgressBar
            android:id="@+id/progressSpinner"
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.ProgressBar"
            />



</androidx.constraintlayout.widget.ConstraintLayout>